--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -42,6 +42,10 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+    	</dependency>
+		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
