Testing data base

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:sqlserver://<SEU_SERVIDOR>:<PORTA>;databaseName=<SEU_BANCO_DE_DADOS>
-spring.datasource.username=<SEU_USUARIO>
-spring.datasource.password=<SUA_SENHA>
+spring.datasource.url=jdbc:sqlserver://${{MSSQL_USERNAME}}:${{MSSQL_SA_PASSWORD}}@${{MSSQL_SERVER}}:${{MSSQL_TCP_PORT}}
+spring.datasource.username=sa
+spring.datasource.password=~9Q9sLmOj0PUYA.QTAjDfKv-gSTGvC-9
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # JPA properties
