feat: Establishing the connection to the database

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,15 @@
-spring.application.name=backend
+spring.application.name=hackathon.backend
 
-spring.datasource.url=jdbc:sqlserver://${{MSSQL_USERNAME}}:${{MSSQL_SA_PASSWORD}}@${{MSSQL_SERVER}}:${{MSSQL_TCP_PORT}}
-spring.datasource.username=sa
-spring.datasource.password=~9Q9sLmOj0PUYA.QTAjDfKv-gSTGvC-9
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:54969/railway
+spring.datasource.username=postgres
+spring.datasource.password=BXxWEqtpotoImHysLRCtgeJrTuiBVHNv
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging settings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
