--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,3 @@
 FROM openjdk:11-jre-slim
-COPY target/hackathon.backend.jar app.jar
+COPY target/backend.jar app.jar
 ENTRYPOINT ["java", "-jar", "/app.jar"]
